# pruebaQT

./: CMakeLists.txt  index.md  main.cpp
